fixed text not showing properly in ads

--- a/Ads - SPA Project/app/css/style.css
+++ b/Ads - SPA Project/app/css/style.css
@@ -13,9 +13,21 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.btn-sidebar{
+    width: 100%;
+}
 .ad-title-{
     float: left;
 }
 .ad-date-{
     float: right;
+}
+
+.permalink_section
+{
+    white-space: pre-wrap; /* css-3 */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
